fixing calc function with $column-gap var

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -9598,8 +9598,8 @@ label.panel-block:hover {
 }
 
 .columns.is-variable {
-  margin-left: calc(-1 * $column-gap);
-  margin-right: calc(-1 * $column-gap);
+  margin-left: calc(-1 * 0.75rem);
+  margin-right: calc(-1 * 0.75rem);
 }
 
 .columns.is-variable .column {
