--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -466,8 +466,8 @@ $column-gap: 0.75rem !default
 
 @if $variable-columns
   .columns.is-variable
-    margin-left: calc(-1 * $column-gap)
-    margin-right: calc(-1 * $column-gap)
+    margin-left: calc(-1 * #{$column-gap})
+    margin-right: calc(-1 * #{$column-gap})
     .column
       padding-left: $column-gap
       padding-right: $column-gap
