--- a/scss/grid/columns.scss
+++ b/scss/grid/columns.scss
@@ -821,8 +821,8 @@ $column-gap: 0.75rem !default;
 
 @if $variable-columns {
   .columns.is-variable {
-    margin-left: calc(-1 * $column-gap);
-    margin-right: calc(-1 * $column-gap);
+    margin-left: calc(-1 * #{$column-gap});
+    margin-right: calc(-1 * #{$column-gap});
 
     .column {
       padding-left: $column-gap;
